examples/test/testpolicy3644.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3644
  namespace: namespace456
spec:
  podSelector:
    matchLabels:
      key28: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value5
      podSelector:
        matchLabels:
          key31: value5
          key47: value49
          key33: value39
